log
Thu 21 Mar 2024 02:09:08 PM UTC: 
 tests:  0|5
total_score: 0/70
eef6215
Thu 21 Mar 2024 02:11:14 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:8: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   51 |        push_back(L, elemento);
      |        ^~~~~~~~~
      |        pushBack
cc1: all warnings being treated as errors
Compilation failed
2c07196
Thu 21 Mar 2024 02:11:42 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:10: error: called object ‘elemento’ is not a function or function pointer
   51 |          elemento(L, elemento);
      |          ^~~~~~~~
exercises.c:49:13: note: declared here
   49 |        int* elemento = (int*)malloc(sizeof(int));
      |             ^~~~~~~~
Compilation failed
f41f3e2
Thu 21 Mar 2024 02:12:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
05aa66d
Thu 21 Mar 2024 02:13:23 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
7aa0676
Thu 21 Mar 2024 02:17:34 PM UTC: 
 exercises.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
9cd3d26
Thu 21 Mar 2024 02:19:22 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
07c80eb
Fri 22 Mar 2024 06:03:44 PM UTC: 
 exercises.c | 30 +++++++++++++++++++++++++++++-
 1 file changed, 29 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:135:29: error: expected expression before ‘||’ token
  135 |       if (cadena[i] == '(') || (cadena[i] == '[') || (cadena[i] == '{'))
      |                             ^~
exercises.c:135:7: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  135 |       if (cadena[i] == '(') || (cadena[i] == '[') || (cadena[i] == '{'))
      |       ^~
exercises.c:135:72: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  135 |       if (cadena[i] == '(') || (cadena[i] == '[') || (cadena[i] == '{'))
      |                                                                        ^
exercises.c:135:72: error: expected statement before ‘)’ token
exercises.c:139:7: error: ‘else’ without a previous ‘if’
  139 |       else
      |       ^~~~
exercises.c:141:31: error: expected expression before ‘||’ token
  141 |         if (cadena[i] == ')') || (cadena[i] == ']') || (cadena[i] == '}'))
      |                               ^~
exercises.c:141:9: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  141 |         if (cadena[i] == ')') || (cadena[i] == ']') || (cadena[i] == '}'))
      |         ^~
exercises.c:141:74: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  141 |         if (cadena[i] == ')') || (cadena[i] == ']') || (cadena[i] == '}'))
      |                                                                          ^
exercises.c:141:74: error: expected statement before ‘)’ token
exercises.c:149:18: error: comparison between pointer and integer [-Werror]
  149 |         if (dato == '(' && cadena[i] == ')') ||
      |                  ^~
exercises.c:149:46: error: expected expression before ‘||’ token
  149 |         if (dato == '(' && cadena[i] == ')') ||
      |                                              ^~
exercises.c:151:45: error: expected statement before ‘)’ token
  151 |            (dato == '{' && cadena[i] == '}'))
      |                                             ^
exercises.c:155:9: error: ‘else’ without a previous ‘if’
  155 |         else
      |         ^~~~
exercises.c:161:1: error: control reaches end of non-void function [-Werror=return-type]
  161 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2244cda
Fri 22 Mar 2024 06:06:03 PM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:135:29: error: expected expression before ‘||’ token
  135 |       if (cadena[i] == '(') || (cadena[i] == '[') || (cadena[i] == '{'))
      |                             ^~
exercises.c:135:7: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  135 |       if (cadena[i] == '(') || (cadena[i] == '[') || (cadena[i] == '{'))
      |       ^~
exercises.c:135:72: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  135 |       if (cadena[i] == '(') || (cadena[i] == '[') || (cadena[i] == '{'))
      |                                                                        ^
exercises.c:135:72: error: expected statement before ‘)’ token
exercises.c:139:7: error: ‘else’ without a previous ‘if’
  139 |       else
      |       ^~~~
exercises.c:141:31: error: expected expression before ‘||’ token
  141 |         if (cadena[i] == ')') || (cadena[i] == ']') || (cadena[i] == '}'))
      |                               ^~
exercises.c:141:9: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  141 |         if (cadena[i] == ')') || (cadena[i] == ']') || (cadena[i] == '}'))
      |         ^~
exercises.c:141:74: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  141 |         if (cadena[i] == ')') || (cadena[i] == ']') || (cadena[i] == '}'))
      |                                                                          ^
exercises.c:141:74: error: expected statement before ‘)’ token
exercises.c:149:18: error: comparison between pointer and integer [-Werror]
  149 |         if (dato == '(' && cadena[i] == ')') || (dato == '[' && cadena[i] == ']') || (dato == '{' && cadena[i] == '}'))
      |                  ^~
exercises.c:149:46: error: expected expression before ‘||’ token
  149 |         if (dato == '(' && cadena[i] == ')') || (dato == '[' && cadena[i] == ']') || (dato == '{' && cadena[i] == '}'))
      |                                              ^~
exercises.c:149:9: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  149 |         if (dato == '(' && cadena[i] == ')') || (dato == '[' && cadena[i] == ']') || (dato == '{' && cadena[i] == '}'))
      |         ^~
exercises.c:149:119: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  149 |         if (dato == '(' && cadena[i] == ')') || (dato == '[' && cadena[i] == ']') || (dato == '{' && cadena[i] == '}'))
      |                                                                                                                       ^
exercises.c:149:119: error: expected statement before ‘)’ token
exercises.c:153:9: error: ‘else’ without a previous ‘if’
  153 |         else
      |         ^~~~
exercises.c:159:1: error: control reaches end of non-void function [-Werror=return-type]
  159 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0b271b5
Fri 22 Mar 2024 06:09:26 PM UTC: 
 exercises.c | 21 +--------------------
 1 file changed, 1 insertion(+), 20 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:135:28: error: expected expression before ‘||’ token
  135 |       if(cadena[i] == '(') || (cadena[i] == '[') || (cadena[i] == '{'))
      |                            ^~
exercises.c:135:7: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  135 |       if(cadena[i] == '(') || (cadena[i] == '[') || (cadena[i] == '{'))
      |       ^~
exercises.c:135:71: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  135 |       if(cadena[i] == '(') || (cadena[i] == '[') || (cadena[i] == '{'))
      |                                                                       ^
exercises.c:135:71: error: expected statement before ‘)’ token
exercises.c:137:28: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  137 |           push(pila, cadena[i]);
      |                      ~~~~~~^~~
      |                            |
      |                            char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘char’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:140:1: error: control reaches end of non-void function [-Werror=return-type]
  140 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1451bd5
